k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-api-ingress
  namespace: capstone
spec:
  ingressClassName: nginx
  rules:
    - host: api.capstone.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capstone-service
                port:
                  number: 80
